--- a/app.yaml
+++ b/app.yaml
@@ -8,6 +8,13 @@ handlers:
 - url: /favicon\.ico
   static_files: favicon.ico
   upload: favicon\.ico
+  
+- url: /css
+  static_dir: css
+- url: /js
+  static_dir: js
+- url: /img
+  static_dir: img
 
 - url: .*
   script: main.app
